Finally fix navigation spacing

--- a/master.css
+++ b/master.css
@@ -77,9 +77,9 @@ div.dropdown-content {
 	border-radius: 10px;
 	box-shadow: 7px 7px 17px var(--box-shadow-light), -7px -7px 17px var(--box-shadow-dark);
 	display: none;
-	margin: 12px;
+	margin: 0px 12px 12px 12px;
 	min-width: 160px;
-	padding: 0px 8px 8px 8px;
+	padding: 8px;
 	position: absolute;
 	z-index: 1;
 	
